--- a/artigos.html
+++ b/artigos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Infotex | Blog</title>
+	<title>Elements - Editorial by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,78 +19,24 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>Infotex</strong> | Blog de Segurança da Informação</a>
-					<!-- <ul class="icons">
+					<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					</ul> -->
+						<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
+						</li>
+						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+					</ul>
 				</header>
 
-				<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h1>Tudo sobre Segurança da Informação</h1>
-							<!-- <p>Referência no Brasil</p> -->
-						</header>
-						<p>Infotex é o maior e mais relevante blog de Segurança da Informação do Brasil. Aqui você
-							encontra desde os assuntos mais
-							básicos até os mais avançados em Tecnologia e Segurança da Informação.</p>
-						<!-- <ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul> -->
-					</div>
-					<span class="image object">
-						<img src="images/pic10.jpg" alt="" />
-					</span>
-				</section>
-
-				<!-- Section -->
-				<!-- <section>
-					<header class="major">
-						<h2>Em alta</h2>
-					</header>
-					<div class="features">
-						<article>
-							<span class="icon fa-gem"></span>
-							<div class="content">
-								<h3>Portitor ullamcorper</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon solid fa-paper-plane"></span>
-							<div class="content">
-								<h3>Sapien veroeros</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon solid fa-rocket"></span>
-							<div class="content">
-								<h3>Quam lorem ipsum</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon solid fa-signal"></span>
-							<div class="content">
-								<h3>Sed magna finibus</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-					</div>
-				</section> -->
-
-				<!-- Section -->
+				<!-- Content -->
 				<section>
-					<header class="major">
-						<h2>Recente</h2>
+					<header class="main">
+						<h1>Artigos</h1>
 					</header>
+
+					<!-- Content -->
 					<div class="posts">
 						<article>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -169,18 +115,19 @@
 						<h2>Menu</h2>
 					</header>
 					<ul>
-						<li><a href="index.html">Início</a></li>
-						<!-- <li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li> -->
+						<li><a href="index.html">Homepage</a></li>
+						<li><a href="generic.html">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li>
 						<li>
-							<span class="opener">Categorias</span>
+							<span class="opener">Submenu</span>
 							<ul>
-								<li><a href="#">Artigos</a></li>
-								<li><a href="#">Notícias</a></li>
-								<li><a href="#">Tutoriais</a></li>
+								<li><a href="#">Lorem Dolor</a></li>
+								<li><a href="#">Ipsum Adipiscing</a></li>
+								<li><a href="#">Tempus Magna</a></li>
+								<li><a href="#">Feugiat Veroeros</a></li>
 							</ul>
 						</li>
-						<!-- <li><a href="#">Etiam Dolore</a></li>
+						<li><a href="#">Etiam Dolore</a></li>
 						<li><a href="#">Adipiscing</a></li>
 						<li>
 							<span class="opener">Another Submenu</span>
@@ -193,16 +140,14 @@
 						</li>
 						<li><a href="#">Maximus Erat</a></li>
 						<li><a href="#">Sapien Mauris</a></li>
-						<li><a href="#">Amet Lacinia</a></li> -->
-						<li><a href="generic.html">Sobre</a></li>
-						<li><a href="generic.html">Contato</a></li>
+						<li><a href="#">Amet Lacinia</a></li>
 					</ul>
 				</nav>
 
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Em alta</h2>
+						<h2>Ante interdum</h2>
 					</header>
 					<div class="mini-posts">
 						<article>
@@ -217,22 +162,14 @@
 							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
 							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
 					</div>
 					<ul class="actions">
-						<li><a href="#" class="button">Ver mais</a></li>
+						<li><a href="#" class="button">More</a></li>
 					</ul>
 				</section>
 
 				<!-- Section -->
-				<!-- <section>
+				<section>
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
@@ -245,7 +182,7 @@
 						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 							Nashville, TN 00000-0000</li>
 					</ul>
-				</section> -->
+				</section>
 
 				<!-- Footer -->
 				<footer id="footer">
